--- a/styles.css
+++ b/styles.css
@@ -148,10 +148,11 @@ button {
 }
 
 .card {
-  width: 100%;
+  text-align: center;
+  width: 33%;
   height: 100%;
   padding: 50px;
-  display: flex;
+ 
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
@@ -187,6 +188,7 @@ button {
     width: 100%;
   }
   .card {
-    flex-direction: column;
+    flex-direction:column ;
+    width: 100%;
   }
 }
