--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
@@ -9,13 +10,31 @@ body {
   background-size: cover;
   background-position: left top;
   font-family: "Zilla Slab", serif;
+  
 }
 
+.home{
+  margin-right: 20px;
+  font-size: 20px;
+  font-weight: 800;
+  color:red;
+}
+.blog{
+  margin-right: 20px;
+  font-size: 20px;
+  font-weight: 800;
+  color:red;
+}
 .box-container {
   width: 70%;
   margin: 0 auto;
 }
-
+.top{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left:580px
+}
 #question {
   height: 100px;
   display: flex;
@@ -99,7 +118,10 @@ body {
 .title {
   text-align: center;
   color: white;
-  margin: 20px 0;
+  margin-top: 20px ;
+  margin-bottom: 20px;
+ margin-right: 500px;
+
 }
 
 .divider-container {
@@ -147,7 +169,7 @@ button {
   justify-content: space-around;
 }
 
-.card {
+.cards {
   text-align: center;
   width: 33%;
   height: 100%;
@@ -187,7 +209,7 @@ button {
     padding: 0 20px;
     width: 100%;
   }
-  .card {
+  .cards {
     flex-direction:column ;
     width: 100%;
   }
