--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   text-decoration: none;
+  list-style: none;
 }
 
 body {
@@ -13,17 +14,14 @@ body {
   
 }
 
-.home{
-  margin-right: 20px;
-  font-size: 20px;
-  font-weight: 800;
-  color:red;
+.navbar-nav{
+  display: flex;
+  
 }
-.blog{
+.nav-link{
+  color: red;
+  font-size: 23px;
   margin-right: 20px;
-  font-size: 20px;
-  font-weight: 800;
-  color:red;
 }
 .box-container {
   width: 70%;
@@ -31,9 +29,11 @@ body {
 }
 .top{
   display: flex;
+  justify-content:space-around;
   align-items: center;
-  justify-content: center;
-  margin-left:580px
+  
+  
+ 
 }
 #question {
   height: 100px;
@@ -120,7 +120,7 @@ body {
   color: white;
   margin-top: 20px ;
   margin-bottom: 20px;
- margin-right: 500px;
+
 
 }
 
@@ -212,5 +212,9 @@ button {
   .cards {
     flex-direction:column ;
     width: 100%;
+  }
+  .title{
+   
+  
   }
 }
