--- a/styles.css
+++ b/styles.css
@@ -11,30 +11,34 @@ body {
   background-size: cover;
   background-position: left top;
   font-family: "Zilla Slab", serif;
-  
+
 }
 
-.navbar-nav{
+.navbar-nav {
   display: flex;
-  
+
 }
-.nav-link{
+
+.nav-link {
   color: red;
   font-size: 23px;
   margin-right: 20px;
 }
+
 .box-container {
   width: 70%;
   margin: 0 auto;
 }
-.top{
+
+.top {
   display: flex;
-  justify-content:space-around;
+  justify-content: space-around;
   align-items: center;
-  
-  
- 
+
+
+
 }
+
 #question {
   height: 100px;
   display: flex;
@@ -44,11 +48,9 @@ body {
   font-size: 25px;
   border-radius: 15px;
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    92.49deg,
-    rgba(255, 255, 255, 0.1) 0.18%,
-    rgba(255, 255, 255, 0.05) 99.85%
-  );
+  background: linear-gradient(92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
 }
@@ -80,9 +82,10 @@ body {
   color: white;
   display: none;
 }
+
 #result {
   position: fixed;
-  top: 50%; 
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   height: 250px;
@@ -94,7 +97,8 @@ body {
   text-align: center;
   padding: 2rem;
 }
-#show-time{
+
+#show-time {
   text-align: center;
   color: white;
   margin: 10px 0;
@@ -103,22 +107,27 @@ body {
 .green {
   color: #9dffad;
 }
+
 .red {
   color: #eb6565;
 }
+
 .bold {
   font-weight: 700;
 }
+
 .inactive {
   border: 2px solid white !important;
 }
+
 .hidden {
   display: none;
 }
+
 .title {
   text-align: center;
   color: white;
-  margin-top: 20px ;
+  margin-top: 20px;
   margin-bottom: 20px;
 
 
@@ -149,6 +158,7 @@ body {
   justify-content: center;
   margin: 30px 0;
 }
+
 button {
   padding: 10px 20px;
   border: none;
@@ -174,29 +184,25 @@ button {
   width: 33%;
   height: 100%;
   padding: 50px;
- 
+
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
   color: white;
   border-radius: 15px;
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    92.49deg,
-    rgba(255, 255, 255, 0.1) 0.18%,
-    rgba(255, 255, 255, 0.05) 99.85%
-  );
+  background: linear-gradient(92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
 }
 
 #modal-background {
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    92.49deg,
-    rgba(255, 255, 255, 0.1) 0.18%,
-    rgba(255, 255, 255, 0.05) 99.85%
-  );
+  background: linear-gradient(92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   height: 100vh;
   width: 100%;
@@ -209,12 +215,11 @@ button {
     padding: 0 20px;
     width: 100%;
   }
+
   .cards {
-    flex-direction:column ;
+    flex-direction: column;
     width: 100%;
   }
-  .title{
-   
-  
-  }
+
+  .title {}
 }
