--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ body {
   background-color: #171717;
   border: 2px solid #9dffad;
   border-radius: 15px;
+  line-height: 0px;
 }
 
 #countdown {
@@ -222,4 +223,10 @@ button {
   }
 
   .title {}
+
+  #display{
+    height: 150px;
+   
+    line-height:0px;
+  }
 }
